<resources>
    <string name="app_name">G36RDE_HF</string>
    <string name="read">Read</string>
    <string name="bought">On Shelf</string>
    <string name="BookName">The Great Gatsby</string>
    <string name="Description">A good book</string>
    <string name="Favourite">Favourite</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="page_count">How many pages?</string>
    <string name="already_purchased">On shelf</string>
    <string name="already_read">Read</string>
    <string name="subtitle">Subtitle</string>
    <string name="first_edition">When did the book come out?</string>
    <string name="new_Book_item">New Book</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="author">Author</string>
    <string name="more">More</string>
    <string name="back">Back</string>
    <string name="detailTitle">Title</string>
    <string name="detailAuthor">Author</string>
    <string name="detailSubtitle">Subtitle</string>
    <string name="detailDetail">Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details DetDetails Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details DetailsDetails Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details
    Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details DetDetails Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details DetailsDetails Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details Details Details Details DetailsDetails Details Details Details tails Details Details DetailsDetails Details Details Details</string>
    <string name="yourPageIndicator">"You are on Page "</string>
    <string name="page">On:</string>
    <string name="pageIndicator">On:</string>
    <string name="pageResource">0</string>
    <string name="detailDate">Never in a million Years</string>

    <string-array name="category_items">
        <item>Science Fiction</item>
        <item>Fantasy</item>
        <item>Literary Fiction</item>
        <item>Historical</item>
        <item>Self Help</item>
        <item>Entertainment</item>
        <item>Manual</item>
        <item>Cooking</item>
        <item>Documentary</item>
        <item>Romantic</item>
    </string-array>
</resources>