<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dip">

    <TextView
        android:textSize="30dp"
        android:id="@+id/tvDetailsAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fontFamily="sans-serif"
        android:text="@string/detailAuthor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:textSize="30dp"
        android:id="@+id/tvDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/detailTitle" />

    <TextView
        android:textSize="25dp"
        android:id="@+id/tvDetailsSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/detailSubtitle" />

    <TextView
        android:textSize="25dp"
        android:id="@+id/tvDetailsDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/detailDate" />

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:id="@+id/tvDetailsDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:scrollbars = "vertical"
        android:text="@string/detailDetail" />


</LinearLayout>